# tomte

./: .gitignore  README.md  bump_to_latest.py  pyproject.toml
.github/workflows/: release.yml
tests/: __init__.py  test_tomte.py
tomte/: cli.py
tomte/scripts/: check_spelling.sh
tomte/tools/: check_copyright.py  check_doc_links.py  check_readme.py  freeze_dependencies.py
