[tool.poetry]
name = "tomte"
version = "0.4.0"
description = "A library that wraps many useful tools (linters, analysers, etc) to keep Python code clean, secure, well-documented and optimised."
authors = ["David Minarsch <david.minarsch@googlemail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<4,>=3.10"
tox = {version = "==3.28.0", optional = true}
black = {version = "==25.1.0", optional = true}
bandit = {version = "==1.8.6", optional = true}
darglint = {version = "==1.8.1", optional = true}
flake8 = {version = "==7.3.0", optional = true}
flake8-bugbear = {version = "==24.12.12", optional = true}
flake8-docstrings = {version = "==1.7.0", optional = true}
flake8-eradicate = {version = "==1.5.0", optional = true}
flake8-isort = {version = "==6.1.2", optional = true}
flake8-pytest-style = {version = "==2.1.0", optional = true}
isort = {version = "==6.0.1", optional = true}
mypy = {version = "==1.16.1", optional = true}
pylint = {version = "==3.3.7", optional = true}
safety = {version = "==3.6.0", optional = true}
vulture = {version = "==2.14", optional = true}
mkdocs = {version = "==1.6.1", optional = true} 
mkdocs-material = {version = "==9.6.15", optional = true}
mkdocs-macros-plugin = {version = "==1.3.7", optional = true}
mkdocs-material-extensions = {version = "==1.3.1", optional = true}
mkdocs-redirects = {version = "==1.2.2", optional = true}
Markdown = {version = "==3.8.2", optional = true}
markdown-include = {version = "==0.8.1", optional = true}
pydoc-markdown = {version = "==4.8.2", optional = true}
pydocstyle = {version = "==6.3.0", optional = true}
pymdown-extensions = {version = "==10.16", optional = true}
pytest = {version = "==7.4.4", optional = true}
pytest-asyncio = {version = "==0.21.2", optional = true}
pytest-cov = {version = "==6.2.1", optional = true}
pytest-randomly = {version = "==3.16.0", optional = true}
pytest-rerunfailures = {version = "==15.1", optional = true}
bs4 = {version = "==0.0.2", optional = true}
Pygments = {version = "==2.19.2", optional = true}
liccheck = {version = "==0.9.2", optional = true}

# don't change unless changed on open-aea
click = {version = "==8.2.1", optional = true}
requests = {version = "==2.32.4", optional = true}
typing-extensions = {version = "==4.13.2", optional = true}

[tool.poetry.extras]
black = ["black", "click"]
bandit = ["bandit"]
cli = ["click", "requests", "tox"]
isort = ["isort"]
flake8 = ["flake8", "flake8-bugbear", "flake8-docstrings", "flake8-eradicate", "flake8-isort", "pydocstyle", "flake8-pytest-style"]
mypy = ["mypy"]
safety = ["safety"]
darglint = ["darglint"]
vulture = ["vulture"]
pylint = ["pylint"]
docs = ["mkdocs", "mkdocs-material", "mkdocs-material-extensions", "mkdocs-macros-plugin", "mkdocs-redirects", "pydoc-markdown", "pydocstyle", "pymdown-extensions", "markdown-include", "Markdown", "bs4", "Pygments", "click"]
tests = ["pytest", "pytest-asyncio", "pytest-cov", "pytest-randomly", "pytest-rerunfailures"]
tox = ["tox"]
liccheck = ["liccheck"]

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
tomte = "tomte.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
